--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -72,13 +72,27 @@
   <script>
 
     const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
     function setDate() {
       const now = new Date();
       const seconds = now.getSeconds();
       const secondsDegrees = ((seconds / 60) * 360) + 90;
 
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+
+      let hours = now.getHours();
+      if (hours > 12) hours -= 12;
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+
+
+      console.log(hours)
+
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
     }
 
     setInterval(setDate, 1000);
