--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -15,7 +15,16 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  const cities = [];
+
+  // fetch() returns a promise
+  // then blob.json() returns another promise
+  // that will be parsed by .json() of the blob data
+  fetch(endpoint)
+    .then(blob => blob.json())
+    .then(data => cities.push(...data))
 
 </script>
   </body>
