--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -34,7 +34,7 @@
   }
 
   function displayMatches() {
-    console.log(this.value);
+    const matchArray = findMatches(this.value, cities);
   }
 
   const searchInput = document.querySelector('.search');
