--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -17,13 +17,17 @@
   ctx.strokeStyle = '#BADA55';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
+  ctx.lineWidth = 50;
 
   let isDrawing = false;
   let lastX = 0;
   let lastY = 0;
+  let hue = 0;
+  let direction = true;
 
   function draw(e) {
     if (!isDrawing) return;
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
     ctx.beginPath();
     // start from:
     ctx.moveTo(lastX, lastY);
@@ -32,6 +36,15 @@
     ctx.stroke();
 
     [ lastX, lastY ] = [ e.offsetX, e.offsetY ];
+
+    hue++;
+    if (hue > 360) hue = 0;
+
+    if (ctx.lineWidth >= 70 || ctx.lineWidth <= 10) {
+      direction = !direction;
+    }
+
+    direction ? ctx.lineWidth++ : ctx.lineWidth--;
   }
 
   canvas.addEventListener('mousedown', (e) => {
