Complete paint-like canvas in the window

--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -19,6 +19,9 @@
   ctx.lineCap = 'round';
   ctx.lineWidth = 50;
 
+  // blending methods:
+  // ctx.globalCompositeOperation = 'multiply';
+
   let isDrawing = false;
   let lastX = 0;
   let lastY = 0;
