Hold shift to check multiple boxes

--- a/10 - Hold Shift and Check Checkboxes/index.html
+++ b/10 - Hold Shift and Check Checkboxes/index.html
@@ -53,12 +53,7 @@
 
 
   </style>
-   <!--
-   The following is a common layout you would see in an email client.
 
-   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
-
-  -->
   <div class="inbox">
     <div class="item">
       <input type="checkbox">
@@ -98,7 +93,28 @@
     </div>
   </div>
 
-<script>
-</script>
+  <script>
+
+    const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+    let lastChecked;
+
+    function handleCheck(e) {
+      let inBetween = false;
+      if (e.shiftKey && this.checked) {
+        checkboxes.forEach(checkbox => {
+          if (checkbox === this || checkbox === lastChecked) {
+            inBetween = !inBetween;
+          }
+          if (inBetween) {
+            checkbox.checked = true;
+          }
+        });
+      }
+      lastChecked = this;
+    };
+
+    checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
+
+  </script>
 </body>
 </html>
