--- a/13 - Slide in on Scroll/index.html
+++ b/13 - Slide in on Scroll/index.html
@@ -43,6 +43,9 @@
   </div>
 
   <script>
+
+    // use debounce on scroll to limit the number of times the 
+    // function is called (waits 20ms, otherwise too crazy )
     function debounce(func, wait = 20, immediate = true) {
       var timeout;
       return function() {
@@ -57,6 +60,20 @@
         if (callNow) func.apply(context, args);
       };
     }
+
+    const sliderImages = document.querySelectorAll('.slide-in');
+
+    function checkSlide(e) {
+      sliderImages.forEach(sliderImage => {
+        // half way through the image
+        const slideInAt = (window.scrollY + window.innerHeight) - (sliderImage.height / 2);
+        
+        // bottom of the image
+        const imageBottom = sliderImage.offsetTop + sliderImage.height;
+      });
+    }
+
+    window.addEventListener('scroll', debounce(checkSlide));
 
   </script>
 
