--- a/13 - Slide in on Scroll/index.html
+++ b/13 - Slide in on Scroll/index.html
@@ -65,11 +65,20 @@
 
     function checkSlide(e) {
       sliderImages.forEach(sliderImage => {
-        // half way through the image
-        const slideInAt = (window.scrollY + window.innerHeight) - (sliderImage.height / 2);
-        
+        // third of the way through the image
+        const slideInAt = (window.scrollY + window.innerHeight) - (sliderImage.height / 3);
+
         // bottom of the image
         const imageBottom = sliderImage.offsetTop + sliderImage.height;
+
+        const isHalfShown = slideInAt > sliderImage.offsetTop;
+        const isNotScrolledPast = window.scrollY < imageBottom;
+
+        if (isHalfShown && isNotScrolledPast) {
+          sliderImage.classList.add('active');
+        } else {
+          sliderImage.classList.remove('active');
+        }
       });
     }
 
